--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -15,7 +15,7 @@ body{
 	height: 250px;
 	position: relative;
 	background-color: #2F2F2F;
-	z-index:0;
+	z-index: 0;
 	text-align: center;
 }
 
@@ -33,7 +33,7 @@ body{
 	color: #FFFFFF;
 	letter-spacing: 0px;
 	line-height: 72px;
-	margin-left:15px
+	margin-left: 15px
 }
 
 
@@ -41,8 +41,8 @@ body{
 .maincontent{
 	height: 400px;
     width: 100%;
-    z-index:0;
-     display: -webkit-flex; /* Safari */
+    z-index: 0;
+    display: -webkit-flex; /* Safari */
     -webkit-flex-wrap: wrap; /* Safari 6.1+ */
     display: flex;   
     flex-wrap: wrap;
@@ -51,38 +51,38 @@ body{
 
 .leftContent{
 	margin-top: -100px;
-	height:507px;
-	width:300px;
-	z-index:1;
+	height: 507px;
+	width: 300px;
+	z-index: 1;
 	position: relative ;
 
 }
 
 .leftDiv1 h3, .leftDiv1 p{
-	 padding-left: 10px;
+	padding-left: 10px;
 }
 
 .leftContentImg{
-	width:100%;
-	height:100%;
-	object-fit:fill;
+	width: 100%;
+	height: 100%;
+	object-fit: fill;
 }
 
 .rightContent{
-	height:450px;
-	display:flex;
-	width:60%;
+	height: 450px;
+	display: flex;
+	width: 60%;
 }
 
 .rightDiv1_img, .rightDiv2_img, .rightDiv3_img{
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 	object-fit: fill;
 	
 }
 
 .rightContentDiv1, .rightContentDiv2, .rightContentDiv3{
-	height:405px;
+	height: 405px;
 	border-right: 1px solid #f9f9f9;
 	flex-wrap: wrap;
 	background-color: white;
@@ -111,81 +111,96 @@ body{
 
 .navHeader h2 {
 	padding: 0 16px;
-	margin:6px 0;
+	margin: 6px 0;
 }
 
 
 /* Modal window style: start */
 .infoModal {
-  background: #FFF;
-  width: 40%;
-  min-width: 200px;
-  text-align: center;
-  padding:0;
-  border: 0;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.8);
+	background: #FFF;
+	width: 40%;
+	min-width: 200px;
+	text-align: center;
+	padding: 0;
+	border: 0;
+	box-shadow: 0 2px 10px rgba(0,0,0,0.8);
 }
+
 .modalContent{
 	padding: 16px;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 .modalHeader{
 	background-color: #546ab3;
-	width:100%;
-	height:100px;
+	width: 100%;
+	height: 100px;
 }
 
 .modalHeader h2{
-	margin:0;
+	margin: 0;
     padding-top: 37px;
 	color: #fff;
 }
+
+.modalFooter{
+	width: 100%;
+	height: auto;
+	margin-top: 10px;
+	text-align: right;
+}
+
 .infoModal::backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.9);
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.9);
 }
 
 .fa-times{
-	color:white;
+	color: white;
 	float: right;
 	padding-right: 12px;
-    padding-top: 12px;
+	padding-top: 12px;
 }
 
 
 /*IPad Layout CSS changes*/
 @media only screen and (min-width:768px) and (max-width : 1024px){
 	.rightContent{
-		display:flex;
+		display: flex;
 		margin-top: -100px;
 		flex-direction: column;
-		z-index:2;
-		height:507px
+		z-index: 2;
+		height: 507px
 	}
+	
 	.rightContentDiv1 div, .rightContentDiv2 div, .rightContentDiv3 div{
-		width:50%;
+		width: 50%;
 		border-bottom: 1px solid #f9f9f9;
 
 	}
+	
 	.navHeader{
+
 		top: 490px;
-		left:0;
-		padding:0;
+		left: 0;
+		padding: 0;
 		width: calc(100% - 16px);
 	}
+	
 	.rightContent  h3{
 		margin-top: 0;
 	}
+	
 	.leftDiv1, .leftDiv2, .leftDiv3{
-		overflow:hidden;
+		overflow: hidden;
 	}
 	
 }
+
 
 /* Phone Layout CSS changes*/
 @media only screen  and (max-width : 768px){
@@ -194,42 +209,43 @@ body{
 	}
 	
 	.leftContent{
-		width:100%;
-		height:320px;
+		width: 100%;
+		height: 320px;
 	}
 	
 	.rightContent{
-		display:inline-block;
+		display: inline-block;
 		margin-top: 0;
-		width:100%;
+		width: 100%;
 	}
 	.leftDiv1, .leftDiv2, .leftDiv3{
-		width:70%;
+		width: 70%;
 		border-bottom: 1px solid #f9f9f9;
-		overflow:hidden;
+		overflow: hidden;
 	}
 
 	.rightDiv1, .rightDiv2, .rightDiv3{
-		width:30%;	
+		width: 30%;	
 
 	}
 	
 	.navHeader{
-		top:50%;
-		right:0;
-		width:auto;
-		left:30%;
+		top: 50%;
+		right: 0;
+		width: auto;
+		left: 30%;
 	}
 	
 	.rightContentDiv1, .rightContentDiv2, .rightContentDiv3{
-		height:160px;
-		text-align:left;
+		height: 160px;
+		text-align: left;
 		border-right: 1px solid #f9f9f9;
-		padding:16px;
+		padding: 16px;
 	}
 
 	.rightContent h3{
 		margin-top: 0;
 	}
+	
 }
 
